@@ -1,3 +1,8 @@
+2003-03-28  Oliver Schirrmeister <oschirr@abm.de>
+
+	* backend/fujitsu.c backend/fujitsu-scsi.h: 
+	  now really supports the fi-4120C
+
 2003-03-26  Karl Heinz Kremer <khk@khk.net>
 
 	* backend/epson.c: Added workaround for GT-8000 scanners,
